--- a/gb/19/9/18/n11529967.md
+++ b/gb/19/9/18/n11529967.md
@@ -1,54 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/xtr/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>7ÔÂÐÂÎÅ±¨µ¼¹Û²â½á¹û  º«¹úè¤ÐÂÎÅÈÔÊÇ×î¶à</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/09/a9a75beecadc9b083b2f3909dac5a8d6-600x400.png" />
-<h6>¹ú¼ÒÍ¨Ñ¶´«²¥Î¯Ô±»á(NCC)18ÈÕ¹«²¼7ÔÂ·ÝµçÊÓÐÂÎÅ±¨µ¼±êÌâÍ³¼Æ½á¹û¡££¨¹ú¼ÒÍ¨Ñ¶´«²¥Î¯Ô±»á(NCC)Ìá¹©£©
-</h6>
-<hr>
-<p>¡¾´ó¼ÍÔª2019Äê09ÔÂ18ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÀµçäÈãÌ¨ÍåÌ¨±±±¨µ¼£©¹ú¼ÒÍ¨Ñ¶´«²¥Î¯Ô±»á(NCC)ÎªÓÐÐ§¼àÀíµçÊÓÐÂÎÅÄÚÈÝ±íÏÖ£¬³ÖÐø¹Û²âÐÂÎÅÆµµÀ²¥ËÍÄÚÈÝÇéÐÎ£¬18ÈÕ¹«²¼7ÔÂ·ÝµçÊÓÐÂÎÅ±¨µ¼±êÌâÍ³¼Æ½á¹ûÏÔÊ¾£¬¸÷ÐÂÎÅÆµµÀ¶¼ÓÐÆäÌ¨ÐÔÆ«ºÃ£¬µ«²¿·ÖÆµµÀ¶ÔÌØ¶¨ÈËÎï²¥±¨±ÈÂÊÈÔÓÐÆ«¸ßÇéÐÎ£¬¾­3ÔÂ¼°5ÔÂ¹Û²â½á¹û±È½Ïºó£¬ÏÔÊ¾²¥±¨ÌØ¶¨ÕþÖÎÈËÎï×ÜÁ¿±ÈÂÊÓÐÏÂ½µÇ÷ÊÆ£¬¶ø¸ö±ðÌØ¶¨ÈËÎïÊ±¼ä³¤¶ÈÔò¸÷ÓÐÔö¼õ¡£</p>
-<p>NCCÔÚ7ÔÂ21ÈÕÖÁ7ÔÂ27ÈÕÆÚ¼ä£¬ÔÚÃ¿ÌìÖÐÎç¡¢Íí¼äÐÂÎÅ±¨µ¼µÄÔòÊý¼°ÃëÊý½øÐÐÍ³¼Æ£¬Õë¶ÔÌ¨ÊÓ¡¢ÖÐÊÓ¡¢»ªÊÓ¡¢Ò¼µçÊÓ¡¢Äê´ú¡¢¶«É­¡¢ÖÐÌì¡¢ÃñÊÓ¡¢ÈýÁ¢¡¢TVBS¡¢å¾ÓîÐÂÎÅ£¬¹²¼Æ11¸öÐÂÎÅÆµµÀ¡£</p>
-<p>¸÷µçÊÓÌ¨±¨µ¼ÌØ¶¨ÈËÎïµÄÔòÊý¡¢ÃëÊý×î¸ß¡£Ì¨ÊÓ¡¢»ªÊÓ¡¢¶«É­Îª²ÌÓ¢ÎÄ£¬ÆäÓà¸÷Ì¨Îªº«¹úè¤£»¸÷Ì¨±¨µ¼´Î¸ßÖ®ÌØ¶¨ÈËÎï²»Ò»£¬ÓÐº«¹úè¤¡¢¿ÂÎÄÕÜ¡¢²ÌÓ¢ÎÄ¼°»Æ¹ú²ýµÈ¡£ÆäÖÐ±¨µ¼º«¹úè¤ÐÂÎÅ£¬ÃëÊý×î¸ßµÄÆµµÀÇ°3ÃûÒÀÐòÎªÖÐÌì62.47£¥¡¢ÖÐÊÓ45.56%¡¢Äê´ú42.40£¥¡£</p>
-<p>NCC´úÀí·¢ÑÔÈËÏôÆíºê±íÊ¾£¬ÖÐÌìÐÂÎÅÌ¨±¨µ¼ÕþÖÎÈËÎïÊ±¼ä×î³¤Îªº«¹úè¤£¬Ê±¼ä±ÈÀý62.47%£¬´Î¸ßÕß²ÌÓ¢ÎÄ19.29%£¬Á½Õß²î¾à¸ß´ï43.18%£¬ÆäËû¸÷Ì¨±¨µ¼ÌØ¶¨ÕþÖÎÈËÎïµÄÊ±¼ä£¬´ó¶¼ÓÐËùËõÐ¡»ò²»ÏÔ×Å¡£</p>
-<p>Áí¸÷ÐÂÎÅÌ¨±¨µ¼ÕþÖÎÈËÎïµÄÊ±¼äÕ¼×Ü±¨µ¼Ê±¼ä±ÈÂÊ£¬ÔÚ3ÔÂµÄ34.59%£¬ÖÁ7ÔÂÒÑ¾­½µÎª25.49%£»¸÷ÆµµÀ±¨µ¼ÌØ¶¨ÈËÎï×ÜÁ¿ÖÐ£¬±¨µ¼ÌØ¶¨ÕþÖÎÈËÎïº«¹úè¤Ê±¼ä×î¸ßÕßÒ²´Ó3ÔÂµÄ56.70%£¬ÖÁ7ÔÂ½µÎª37.85%¡£</p>
-<p>¶Ô´Ë£¬NCC¼òÈÎÊÓ²ì³ÂÊéÃú±íÊ¾£¬ÆäÊµ´Ó3µ½7ÔÂµÄÍ³¼ÆÊý¾Ý£¬ÄÜ¹»¿´µ½ÖÐÌìÓÐËù¸ÄÉÆ£¬µ«»¹ÊÇÏ£ÍûÖÐÌìÄÜ¹»Í¸¹ý×ÔÂÉ£¬Ìá¹©ÃñÖÚ¸ü¶àÔªµÄÐÂÎÅ×ÊÑ¶¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£ºÓñÕä</p>
-<hr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wtyoso3338/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/wtyoso3338/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/wtyoso3338/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/wtyoso3338/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>7æœˆæ–°é—»æŠ¥å¯¼è§‚æµ‹ç»“æžœ  éŸ©å›½ç‘œæ–°é—»ä»æ˜¯æœ€å¤š</h2>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/9/18/n11529967.htm">7ÔÂÐÂÎÅ±¨µ¼¹Û²â½á¹û  º«¹úè¤ÐÂÎÅÈÔÊÇ×î¶à</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11455320.htm">5GÃ÷ÄêÉÏÂ· NCC£ºµÃ±ê³§ÉÌÐë±¨¸æ×Ê°²¹ÜÀí³Ì¶È</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11450593.htm">ÈçÎ´±êµ½5GÆµÆ× NCC£ºÄÜ¸Ä×âÓÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/9/n11442689.htm">Ôö¶¼ÊÐ¹«Ô°ÎüÒýÁ¦ NCCÊÐÖÐÐÄ¿ªÊ×¼Ò¾Æ¹Ý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/4/n11430087.htm">»»ÕÕÄÜ²»ÄÜ¹ý NCC£ºÖÐÌì×Ô¼ºÃæ¶Ô</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/24/n11406190.htm">ÖÐÌìÐÂÎÅÅ¤Çú±¨µ¼ NCCÔÙ´Î¿ª·£160Íò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/19/n11395689.htm">º«Åú¶ÔÃ½ÌåÁ½Ì×±ê×¼ NCC£ºÒ»ÇÐÒÀ·¨ÐÐÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11393162.htm">Ì¨Ã½ÒÉÔâ²Ù¿Ø NCC£ºÊôÊµ½«ÒÀ·¨À´´¦Àí</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11390771.htm">Ì¨NCC£º5ÔÂ·ÝÖÐÌìÁù³ÉÐÂÎÅ¶¼ÊÇº«¹úè¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11390769.htm">NCCÍ¨¹ýÑÇÌ«µçÐÅÆ«Ô¶µØÇø½èÍøÌ¨¸ç´ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/10/n11376084.htm">499Ö®ÂÒ NCC¸Ä·£ÖÐ»ªµçÐÅ120ÍòÔª</a></li>
+<h6></h6>
+<hr>
+<p>ã€å¤§çºªå…ƒ2019å¹´09æœˆ18æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…èµ–çŽŸèŒ¹å°æ¹¾å°åŒ—æŠ¥å¯¼ï¼‰å›½å®¶é€šè®¯ä¼ æ’­å§”å‘˜ä¼š(NCC)ä¸ºæœ‰æ•ˆç›‘ç†ç”µè§†æ–°é—»å†…å®¹è¡¨çŽ°ï¼ŒæŒç»­è§‚æµ‹æ–°é—»é¢‘é“æ’­é€å†…å®¹æƒ…å½¢ï¼Œ18æ—¥å…¬å¸ƒ7æœˆä»½ç”µè§†æ–°é—»æŠ¥å¯¼æ ‡é¢˜ç»Ÿè®¡ç»“æžœæ˜¾ç¤ºï¼Œå„æ–°é—»é¢‘é“éƒ½æœ‰å…¶å°æ€§åå¥½ï¼Œä½†éƒ¨åˆ†é¢‘é“å¯¹ç‰¹å®šäººç‰©æ’­æŠ¥æ¯”çŽ‡ä»æœ‰åé«˜æƒ…å½¢ï¼Œç»3æœˆåŠ5æœˆè§‚æµ‹ç»“æžœæ¯”è¾ƒåŽï¼Œæ˜¾ç¤ºæ’­æŠ¥ç‰¹å®šæ”¿æ²»äººç‰©æ€»é‡æ¯”çŽ‡æœ‰ä¸‹é™è¶‹åŠ¿ï¼Œè€Œä¸ªåˆ«ç‰¹å®šäººç‰©æ—¶é—´é•¿åº¦åˆ™å„æœ‰å¢žå‡ã€‚</p>
+<p>NCCåœ¨7æœˆ21æ—¥è‡³7æœˆ27æ—¥æœŸé—´ï¼Œåœ¨æ¯å¤©ä¸­åˆã€æ™šé—´æ–°é—»æŠ¥å¯¼çš„åˆ™æ•°åŠç§’æ•°è¿›è¡Œç»Ÿè®¡ï¼Œé’ˆå¯¹å°è§†ã€ä¸­è§†ã€åŽè§†ã€å£¹ç”µè§†ã€å¹´ä»£ã€ä¸œæ£®ã€ä¸­å¤©ã€æ°‘è§†ã€ä¸‰ç«‹ã€TVBSã€å¯°å®‡æ–°é—»ï¼Œå…±è®¡11ä¸ªæ–°é—»é¢‘é“ã€‚</p>
+<p>å„ç”µè§†å°æŠ¥å¯¼ç‰¹å®šäººç‰©çš„åˆ™æ•°ã€ç§’æ•°æœ€é«˜ã€‚å°è§†ã€åŽè§†ã€ä¸œæ£®ä¸ºè”¡è‹±æ–‡ï¼Œå…¶ä½™å„å°ä¸ºéŸ©å›½ç‘œï¼›å„å°æŠ¥å¯¼æ¬¡é«˜ä¹‹ç‰¹å®šäººç‰©ä¸ä¸€ï¼Œæœ‰éŸ©å›½ç‘œã€æŸ¯æ–‡å“²ã€è”¡è‹±æ–‡åŠé»„å›½æ˜Œç­‰ã€‚å…¶ä¸­æŠ¥å¯¼éŸ©å›½ç‘œæ–°é—»ï¼Œç§’æ•°æœ€é«˜çš„é¢‘é“å‰3åä¾åºä¸ºä¸­å¤©62.47ï¼…ã€ä¸­è§†45.56%ã€å¹´ä»£42.40ï¼…ã€‚</p>
+<p>NCCä»£ç†å‘è¨€äººè§ç¥ˆå®è¡¨ç¤ºï¼Œä¸­å¤©æ–°é—»å°æŠ¥å¯¼æ”¿æ²»äººç‰©æ—¶é—´æœ€é•¿ä¸ºéŸ©å›½ç‘œï¼Œæ—¶é—´æ¯”ä¾‹62.47%ï¼Œæ¬¡é«˜è€…è”¡è‹±æ–‡19.29%ï¼Œä¸¤è€…å·®è·é«˜è¾¾43.18%ï¼Œå…¶ä»–å„å°æŠ¥å¯¼ç‰¹å®šæ”¿æ²»äººç‰©çš„æ—¶é—´ï¼Œå¤§éƒ½æœ‰æ‰€ç¼©å°æˆ–ä¸æ˜¾ç€ã€‚</p>
+<p>å¦å„æ–°é—»å°æŠ¥å¯¼æ”¿æ²»äººç‰©çš„æ—¶é—´å æ€»æŠ¥å¯¼æ—¶é—´æ¯”çŽ‡ï¼Œåœ¨3æœˆçš„34.59%ï¼Œè‡³7æœˆå·²ç»é™ä¸º25.49%ï¼›å„é¢‘é“æŠ¥å¯¼ç‰¹å®šäººç‰©æ€»é‡ä¸­ï¼ŒæŠ¥å¯¼ç‰¹å®šæ”¿æ²»äººç‰©éŸ©å›½ç‘œæ—¶é—´æœ€é«˜è€…ä¹Ÿä»Ž3æœˆçš„56.70%ï¼Œè‡³7æœˆé™ä¸º37.85%ã€‚</p>
+<p>å¯¹æ­¤ï¼ŒNCCç®€ä»»è§†å¯Ÿé™ˆä¹¦é“­è¡¨ç¤ºï¼Œå…¶å®žä»Ž3åˆ°7æœˆçš„ç»Ÿè®¡æ•°æ®ï¼Œèƒ½å¤Ÿçœ‹åˆ°ä¸­å¤©æœ‰æ‰€æ”¹å–„ï¼Œä½†è¿˜æ˜¯å¸Œæœ›ä¸­å¤©èƒ½å¤Ÿé€è¿‡è‡ªå¾‹ï¼Œæä¾›æ°‘ä¼—æ›´å¤šå…ƒçš„æ–°é—»èµ„è®¯ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šçŽ‰ç</p>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/9/19/n11531193.htm">¡¾·­Ç½±Ø¿´¡¿´«Ðí¼ÒÓ¡±»±ß¿Ø ÖÐ¹²¶Ô¸»ºÀÏÂÊÖ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/19/n11532595.htm">ÂíÔÆÍËÐÝºó Âí»¯ÌÚÐ¶ÈÎÌÚÑ¶Õ÷ÐÅ·¨¶¨´ú±íÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/19/n11531293.htm">³ÌÏþÈÝ£ºÏã¸ÛÈýÏî»î¶¯È¡Ïû ÖÐ¹²Ê®Ò»Ìí¶Â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/19/n11533082.htm">´¨ÆÕ×ÜÍ³¿ã¶µ³£´§Ò»¾í³®Æ± ÎªÁËÒ»¸öÓÃÍ¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/10/14/n8397724.htm">¡¾ÎÄÊ·¡¿Ìì°²ÃÅ×Ï½û³Ç  ÎÝ¼¹²Ø±¦Ï»ÓÐËµµÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/6/24/n8032195.htm">¡¾ÎÄÊ·¡¿×Ï½û³Ç´óÆø»Ô»Í ÌåÏÖÌì×ÓÖÁ×ð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/13/n11519133.htm">ÇïÌìÑøÉú²»½öÑøÊÕ ÖÐÒ½½ÌÈËÊµ×÷·½·¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/4/n11234376.htm">¡¾Õ÷ÎÄ¡¿ÎÄÓî£º¿Æ¾ÙÇ§ÄêÐËË¥Â¼£¨¶þ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/18/n11530609.htm">Àî¼Î³Ï·´ËÍÖÐÁ¬·¢Éù ×¨¼Ò£º¾ä¾ä»÷ÖÐÖÐ¹²Òªº¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/18/n11529881.htm">¸ÛÌú³ö¹ì ¿¹ÒéÕß±»Ä¨ºÚ Óë¹ùÎÄ¹ó±¬ÁÏ¾ªÈËÎÇºÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/18/n11530401.htm">Ê®Ò»ÁÙ½ü ´óÅúVPN±»±Æ¹ØÍ£ ÍøÃñ·ßÅ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/19/n11531209.htm">¡¾ÅÄ°¸¾ªÆæ¡¿ÃÀ¹ú»áÏã¸ÛÎÊÌâ¼ÇÕß»á10·ÖÖÓ¾«»ª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/17/n11527424.htm">¡¾ÊÀ½çÊ®×ÖÂ·¿Ú¡¿¹ùÌ¨ÃúÎªºÎÆúÑ¡Ì¨Íå×ÜÍ³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/19/n11533140.htm">¡¾ÐÂÎÅ¿´µã¡¿¡°Í´¿àÖ¸Êý¡±ÉÏÉý Ï°ÀîÁ¬º°»°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/18/n11529810.htm">ÓëÑîÀö»¨¶ÔÏ·ÑÝÄï×Ó ³ÂâùÕæÊ×ÑÝ¸è×ÐÏ·Ñ¹Á¦´ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/18/n11530442.htm">ÉæÃô¸ÐÌâ²ÄÎ´ÅÄÐø¼¯ ÖÜÐÇ³ÛµçÓ°ÆØÃØÐÁ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/18/n11528944.htm">Ì©¹úÐ¡¹·ÓëÖ÷ÈË×ßÊ§ Ô­µØµÈ4ÄêÖÕÓÚÔÙÏà¼û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/17/n11528306.htm">·¶±ù±ùÉúÈÕºóÎ¢²©»»ÐÂÍ·Ïñ Ë¿Ë¿°×·¢ÆÄÏÔ²×É£</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/17/n11527968.htm">¸èÊÖ»ÆÒ«Ã÷Å­³â¾¯·½£ºÖ´·¨Èç½²´ó»°Ò»Ñù»ÄÃý</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/9/18/n11529967.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/7/10/n11376084.md#1">499ä¹‹ä¹± NCCæ”¹ç½šä¸­åŽç”µä¿¡120ä¸‡å…ƒ</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/7/18/n11390769.md#1">NCCé€šè¿‡äºšå¤ªç”µä¿¡åè¿œåœ°åŒºå€Ÿç½‘å°å“¥å¤§</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/7/18/n11390771.md#1">å°NCCï¼š5æœˆä»½ä¸­å¤©å…­æˆæ–°é—»éƒ½æ˜¯éŸ©å›½ç‘œ</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/7/18/n11393162.md#1">å°åª’ç–‘é­æ“æŽ§ NCCï¼šå±žå®žå°†ä¾æ³•æ¥å¤„ç†</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/7/19/n11395689.md#1">éŸ©æ‰¹å¯¹åª’ä½“ä¸¤å¥—æ ‡å‡† NCCï¼šä¸€åˆ‡ä¾æ³•è¡Œäº‹</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/7/24/n11406190.md#1">ä¸­å¤©æ–°é—»æ‰­æ›²æŠ¥å¯¼ NCCå†æ¬¡å¼€ç½š160ä¸‡</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/8/4/n11430087.md#1">æ¢ç…§èƒ½ä¸èƒ½è¿‡ NCCï¼šä¸­å¤©è‡ªå·±é¢å¯¹</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/8/9/n11442689.md#1">å¢žéƒ½å¸‚å…¬å›­å¸å¼•åŠ› NCCå¸‚ä¸­å¿ƒå¼€é¦–å®¶é…’é¦†</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/8/13/n11450593.md#1">å¦‚æœªæ ‡åˆ°5Gé¢‘è°± NCCï¼šèƒ½æ”¹ç§Ÿç”¨</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/8/15/n11455320.md#1">5Gæ˜Žå¹´ä¸Šè·¯ NCCï¼šå¾—æ ‡åŽ‚å•†é¡»æŠ¥å‘Šèµ„å®‰ç®¡ç†ç¨‹åº¦</a></li>
+<hr>
+
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">ä¸­å…±çš„ä¼ªç«éª—å±€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234439.md#1" target="_blank">ã€å¾æ–‡ã€‘æ–‡å®‡ï¼šå²ä¸Šæœ€å…¬å¹³çš„é€‰å®˜åˆ¶â€”â€”ç§‘ä¸¾åƒå¹´å…´è¡°å½•ï¼ˆå››ï¼‰</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">æˆ‘çš„çˆ¶äº²</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/14/n13021756.md#1">ã€å°å®‡å®™ä¼ è¯´ã€‘å·¨äººçŽ°èº«ï¼Ÿä¸–ç•Œå„åœ°çš„å·¨å¤§è„šå°</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/10/n13011671.md#1">ä¸€ä»£é£Žæµæ‰å­è¢æžšçš„å››ä¸–äººç”Ÿ è½¬ç”Ÿæ”¹è¿‡æ‚”ä¸å½“åˆ</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/17/n13028994.md#1">ã€æœªè§£ä¹‹è°œã€‘é¦™æ¸¯é£Žæ°´æ¯’å±€ ç ´è§£æœ‰æ–¹</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/17/n13029141.md#1">ã€æœªè§£ä¹‹è°œã€‘çˆ±å¾·åŠ Â·å‡¯è¥¿å’Œä»–çš„â€œç”Ÿå‘½è§£è¯»â€</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/15/n13024307.md#1">ã€å¿ ä¹‰ä¼ ã€‘å•éª‘æ•‘ä¸» èµµäº‘ä¹‰é‡å¦‚å±±ï¼ˆä¸Šï¼‰</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040311.md#1">ã€æ—¶äº‹çºµæ¨ªã€‘ç–«æƒ…é€¼äº¬æ·±åœèˆª äº²å…±ä¸–å«ä¸“å®¶å‡‰äº†</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13040536.md#1">ã€çè¨€çœŸè¯­ã€‘é’Ÿå‰‘åŽï¼šè‹¹æžœè¢«æ‰“åŽ‹ è§¦åŠ¨å›½é™…</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040132.md#1">ã€è´¢å•†å¤©ä¸‹ã€‘å€¼å¾—æŠ•èµ„å—ï¼Ÿå¥ˆé›ªçš„èŒ¶èµ´æ¸¯ä¸Šå¸‚</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037328.md#1">è‘£ç»çº¬å›é€ƒï¼Ÿç« å®¶æ•¦ï¼šè‹¥å±žå®ž ä¸­å…±æˆ–ä¸€å¤œå˜å¤©</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13035669.md#1">æ‹œç™»çˆ±çŠ¬åŽ»ä¸– è”¡è‹±æ–‡ç•™è¨€ä»¤ä¸­å…±å–‰èˆŒç‚¸é”…</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037165.md#1">CGTNç¼–è¾‘çˆ†ä¹ è®¿ç¾Žå‡ºçŠ¶å†µ ç¼–è¾‘å®¤ææ…Œå«éª‚</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037820.md#1">é»„å®‰è´¬æŸå°æ¹¾ç«žäº‰åŠ›æŽ’å åé­å¤§é™†ç½‘æ°‘å‘›åæ¿€</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037619.md#1">è¢«ä¼ å°†å‚åŠ å¤§é™†ç»¼è‰ºèŠ‚ç›® åˆ˜å¾·åŽç›´æŽ¥å›žåº”</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13038775.md#1">å®‰ä»¥è½©è·¨æµ·æèµ PAPR  å¤äºŽä¹”ç­‰å‹äººå“åº”é€æš–</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/20/n13035251.md#1">ç›¸è¯†å†¯å¾·ä¼¦20å¹´æ‰ç»“å©š èˆ’æ·‡æ›é€—è¶£åŽŸå› ç§€æ©çˆ±</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037497.md#1">å‘¨æ˜Ÿé©°59å²ç”Ÿæ—¥ æž—å…è¿žç»­6å¹´ä¸ºè€æ¿é€ç¥ç¦</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036686.md#1">ä¸ç”¨ä¸€æžªä¸€ç‚® ç¾Žå†›æˆ˜èˆ°å¦‚ä½•ååˆ¶æ¥è¢­å¯¼å¼¹ï¼Ÿ</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13036544.md#1">åŠ¨ç‰©çœŸèªæ˜Žï¼Ÿ é¦™æ¸¯é‡ŽçŒªå’Œå°åº¦çŒ´å­æ­ä¹˜åœ°é“</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13033696.md#1">å’–å•¡ã€èŒ¶çœŸèƒ½æ¶ˆç–²åŠ³ï¼ŸåŒ»å¸ˆï¼šæ”¹å–„ç–²åŠ³å…³é”®åœ¨è¿™é‡Œ</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13038598.md#1">æ¯é¸¡ä¸ºä¿æŠ¤å°é¸¡ä¸Žè›‡æ‹¼å‘½ è¯æ˜Žæ¯çˆ±ä¼Ÿå¤§</a></li>
+<li><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/21/n13037063.md#1">å˜èƒ–å¯èƒ½æ˜¯è„¾è™šï¼Ÿ3æ‹›å…»å¥½è„¾ å¢žè‚Œåˆå‡è‚¥</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/wtyoso3338/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/wtyoso3338/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/9/18/n11529967.htm">7æœˆæ–°é—»æŠ¥å¯¼è§‚æµ‹ç»“æžœ  éŸ©å›½ç‘œæ–°é—»ä»æ˜¯æœ€å¤š</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtyoso3338/djy/blob/master/gb/19/9/18/n11529967.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/wtyoso3338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/wtyoso3338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/st1.jpg" title="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"  alt="å…³æ³¨ä¸‰äº¿äººä¸‰é€€"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/sj1.jpg" title="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="ä¸‰ç™¾å¤šä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/wtyoso3338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtyoso3338/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
